--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       rel="icon"
       href=".../icons8-task-ios_filled-32.png"
     />
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/calendar.svg" />
+
     <link
       type="image/png"
       sizes="96x96"
@@ -21,7 +23,7 @@
       href=".../icons8-task-ios_filled-96.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iPlanner-Task Manager</title>
+    <title>iPlan-Task Manager</title>
   </head>
   <body>
     <div id="root"></div>
